--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <button id="tab-btn">SAVE TAB</button>
-        <button id="delete-btn">DELETE ALL</button>
-        <ul id="ul-el">
-        </ul>
+        <button id="tab-btn">SAVE JOB</button>
+        <button id="resource-btn">SAVE RESOURCE</button>
+        <p id="saved">
+        </p>
         <script src="index.js"></script>
     </body>
 </html>
